SystemUI: Make application non-persistent in memory
Set the application persistent flag to 'false' so that the application is
not kept in memory all the time.

Change-Id: I3c8009d40f338be7692cfe6b206ad319ced8c11b

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -118,7 +118,7 @@
 
     <application
         android:name=".SystemUIApplication"
-        android:persistent="true"
+        android:persistent="false"
         android:allowClearUserData="false"
         android:allowBackup="false"
         android:hardwareAccelerated="true"
